foreman.conf - Change the path to certs to make selinux happy

--- a/data/httpd/foreman.conf
+++ b/data/httpd/foreman.conf
@@ -14,8 +14,8 @@
   ServerName foreman.local.lan
 
   SSLEngine on
-  SSLCertificateFile /home/lstejska/konfig/mkcert/_wildcard.local.lan.pem
-  SSLCertificateKeyFile /home/lstejska/konfig/mkcert/_wildcard.local.lan-key.pem
+  SSLCertificateFile /etc/httpd/conf.d/_wildcard.local.lan.pem
+  SSLCertificateKeyFile /etc/httpd/conf.d/_wildcard.local.lan-key.pem
 
   SSLOptions +ExportCertData
 
