--- a/foreman_dev_provisioning/conf/dhcpd.conf
+++ b/foreman_dev_provisioning/conf/dhcpd.conf
@@ -4,14 +4,13 @@ subnet 192.168.190.0 netmask 255.255.255.0 {
     range 192.168.190.2 192.168.190.254;
 
     option domain-name "virtual.lan";
-    option domain-name-servers 192.168.190.1;
+    option domain-name-servers 192.168.190.1, 8.8.8.8, 8.8.4.4;
 
     option subnet-mask 255.255.255.0;
     option routers 192.168.190.1;
     option broadcast-address 192.168.190.255;
 
     next-server 192.168.190.1;
-    option root-path "/var/lib/tftpboot";
     filename "pxelinux.0";
 
     default-lease-time 600;
