--- a/foreman/dev_managed_dhcp/dhcp/dhcpd.conf
+++ b/foreman/dev_managed_dhcp/dhcp/dhcpd.conf
@@ -2,7 +2,7 @@ omapi-port 7911;
 
 subnet 192.168.66.0 netmask 255.255.255.0 {
     range 192.168.66.2 192.168.66.254;
-    option domain-name "foreman_dhcp_isc.lan";
+    option domain-name "foreman-isc.lan";
     option routers 192.168.66.1;
     option broadcast-address 192.168.66.255;
     default-lease-time 600;
